[package]
name = "benchlib-rs"
version = "0.3.3"
authors = ["Trivernis <trivernis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A libary to benchmark closures"

[lib]
name = "benchlib"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
termion = "1.5.5"
